--- a/.github/workflows/base--deploy.yml
+++ b/.github/workflows/base--deploy.yml
@@ -35,7 +35,7 @@ jobs:
           aws-region: us-west-2
       - name: Run cdk
         run: |
-            cd apps/tutorseekers-api
+            cd apps/base-infrastructure
             cdk deploy -c setup=true --require-approval never
             
     #   - name: Copy files to the test website with the AWS CLI
