--- a/apps/certificate/config/setup.yaml
+++ b/apps/certificate/config/setup.yaml
@@ -1,3 +1,5 @@
+AWSAccountID: "216211142709"
+AWSProfileRegion: "eu-west-2"
 App: "CameronGuy-biz"
 Prefix: "cameronguy-biz"
 DomainName: cameronguy.biz
