--- a/.github/workflows/frontend--deploy.yml
+++ b/.github/workflows/frontend--deploy.yml
@@ -33,9 +33,9 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::216211142709:role/AWSOpenIdRole
           aws-region: us-west-2
-      # - name: Build
-      #   run: |
-      #     yarn backend:build
+      - name: Build
+        run: |
+          yarn backend:build
       - name: Run cdk
         run: |
             cd apps/frontend-deploy
