--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "clean": "rm -rf .next",
     "dev": "next dev",
-    "build": "next build  && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
