--- a/.github/workflows/base--deploy.yml
+++ b/.github/workflows/base--deploy.yml
@@ -33,6 +33,10 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::216211142709:role/AWSOpenIdRole
           aws-region: us-west-2
+      - name: Build
+        run: |
+          cd apps/base-infrastructure
+          yarn build
       - name: Run cdk
         run: |
             cd apps/base-infrastructure
